force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__Description__c.field-meta.xml
<CustomField>
    <fullName>ssot__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Description</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>