force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__DesiredDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__DesiredDeliveryDate__c</fullName>
    <label>Desired Delivery Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DesiredDeliveryDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>