force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__GiftMessageText__c.field-meta.xml
<CustomField>
    <fullName>ssot__GiftMessageText__c</fullName>
    <label>Gift Message</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GiftMessageText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>