force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__OriginalDeliveryGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OriginalDeliveryGroupId__c</fullName>
    <label>Original Delivery Group</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OriginalDeliveryGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>