force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__rel_1697761217636_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761217636_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesOrderDeliveryGroup_OriginalDeli_rel</label>
    <referenceTo>ssot__SalesOrderDeliveryGroup__dlm</referenceTo>
    <relationshipLabel>SalesOrderDeliveryGroup_OriginalDeli_rel</relationshipLabel>
    <relationshipName>rel_1697761217636_end</relationshipName>
    <type>Lookup</type>
</CustomField>