force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__rel_1697761218704_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761218704_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesOrderDeliveryGroup_ContactPoint_rel</label>
    <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
    <relationshipLabel>SalesOrderDeliveryGroup_ContactPoint_rel</relationshipLabel>
    <relationshipName>rel_1697761218704_end</relationshipName>
    <type>Lookup</type>
</CustomField>