force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__SalesOrderDeliveryGroupNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderDeliveryGroupNumber__c</fullName>
    <label>Sales Order Delivery Group Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderDeliveryGroupNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>