force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__SalesOrderDeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderDeliveryStatus__c</fullName>
    <label>Sales Order Delivery Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderDeliveryStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>