force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__TotalDeliveryChargeAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDeliveryChargeAmount__c</fullName>
    <label>Total Delivery Charge Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDeliveryChargeAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>