force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__TotalDeliveryTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalDeliveryTaxAmount__c</fullName>
    <label>Total Delivery Tax Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalDeliveryTaxAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>