force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__TotalUnitPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalUnitPriceAmount__c</fullName>
    <label>Total Unit Price Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalUnitPriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>