force-app/main/default/objects/ssot__SalesOrderDeliveryGroup__dlm/fields/ssot__TotalWithTaxAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalWithTaxAdjustmentAmount__c</fullName>
    <label>Total With Tax Adjustment Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalWithTaxAdjustmentAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>